fix broken update dialog, add long click closing to menu comp, fix lazy component, fix stylebleed in example app, add devcontainer

--- a/app/example/app/assets/global.css
+++ b/app/example/app/assets/global.css
@@ -10,88 +10,6 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
-a {
-	color: rgb(0,100,200);
-	text-decoration: none;
-}
-
-a:hover {
-	text-decoration: underline;
-}
-
-a:visited {
-	color: rgb(0,80,160);
-}
-
-.active {
-  font-weight: 700;
-}
-
-label {
-  display: inline-block;
-  text-transform: uppercase;
-  font-size: 0.75rem;
-  font-weight: bold;
-}
-
-input, button, select, textarea {
-	font-family: inherit;
-	font-size: inherit;
-	padding: 0.4em;
-	margin: 0 0 0.5em 0;
-	box-sizing: border-box;
-	border: 1px solid #ccc;
-	border-radius: 2px;
-}
-
-input:disabled {
-	color: #ccc;
-}
-
-input[type="range"] {
-	height: 0;
-}
-
-button {
-	background-color: #f4f4f4;
-	outline: none;
-}
-
-button:active {
-	background-color: #ddd;
-}
-
-button:focus {
-	border-color: #666;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-}
-button {
-  margin-left: 0.75em;
-}
-
-.todo .is-complete {
-  text-decoration: line-through;
-  color: green;
-  background: none;
-  border: 1px solid #0000;
-}
-.todo input {
-  width: 440px;
-}
-.todo button {
-  border-radius: 50%;
-  width: 2.25em;
-  height: 2.25em;
-  line-height: 1.3em;
-  text-align: center;
-  margin-left: 0.75em;
-  padding: 0;
-}
-
 .animated-placeholder {
   background: linear-gradient(90deg, hsl(210 31% 97%), #ffffff, #bcbfc3);
   background-size: 400% 400%;
